--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Basic Calculator</title>
+    <title>Advanced Calculator</title>
 </head>
 <body>
     <div class="calculator">
@@ -12,7 +12,7 @@
         <div class="buttons">
             <button class="btn" onclick="clearDisplay()">C</button>
             <button class="btn" onclick="appendToDisplay('/')">/</button>
-            <button class="btn" onclick="appendToDisplay('*')">*</button>
+            <button class="btn" onclick="appendToDisplay('')"></button>
             <button class="btn" onclick="appendToDisplay('-')">-</button>
             <button class="btn" onclick="appendToDisplay('7')">7</button>
             <button class="btn" onclick="appendToDisplay('8')">8</button>
